# pyhps-data-transfer

./: .env  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  GitVersion.yml  README.md  README.rst  build.py  bumpver.toml  conftest.py  data-transfer-service-integration.md  docker-compose.yaml  generate_models.sh  index.html  pyproject.toml  pytest.ini  robots.txt  setup.py  sitemap.xml  tech-review.md  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  class3.md  feature.yml  story.yaml  test-case.yml  test-log.yml
.github/actions/hps_services/: action.yml
.github/workflows/: ci_cd.yml  generate_models.yml  label.yml  main.yml  release.yml  tests.yml  version_increment.yml  versioning.yaml
ansys/hps/data_transfer/client/: __version__.py  binary.py  client.py  exceptions.py  token.py
doc/: .vale.ini  make.bat
doc/source/: conf.py  contribute.rst  examples.rst  index.rst
doc/source/api/: auth.rst  client.rst  data_transfer.rst  exceptions.rst  index.rst
doc/source/examples/: ex_permissions.rst  ex_run_async.rst  ex_startup.rst  ex_transfer_files.rst  index.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst  permissions.rst  run_async.rst
doc/styles/: .gitignore
doc/user_guide/: index.rst  run_async.rst
examples/: README.txt  transfer_files.py
examples/basic/: 00_file_operations_client.py  01_async_data_transfer_client.py  README.txt  async_data_transfer_client.py  file_operations_client.py  run.py  run_async.py  setup.py
examples/permissions/: README.txt  run.py  set_permissions_example.py
examples/startup/: README.txt  data_transfer_runner.py  data_transfer_runner_async.py  run.py
examples/sum_numbers/: setup.py
examples/transfer_files/: README.txt  transfer_files.py
examples/transfer_files/_downloaded/: transfer_files.py
python-nextgen/: README.md  pyproject.toml  setup.py
python-nextgen/.openapi-generator/: FILES
python-nextgen/docs/: CoreErrorResponse.md  DataTransferApi.md  OperationsApi.md  OpsOperation.md  OpsOperationState.md  RestBuildInfo.md  RestOpIdResponse.md  RestOpsRequest.md  RestOpsResponse.md  RestPathOperations.md  RestSrcDst.md  RestSrcDstOperations.md  RestStatus.md  RestStorageConfigResponse.md  RestStoragePath.md  RestTokenRequest.md  StatusApi.md  StorageApi.md  TokensApi.md
python-nextgen/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python-nextgen/openapi_client/api/: __init__.py  data_transfer_api.py  operations_api.py  status_api.py  storage_api.py  tokens_api.py
python-nextgen/openapi_client/models/: __init__.py  core_error_response.py  ops_operation.py  ops_operation_state.py  rest_build_info.py  rest_op_id_response.py  rest_ops_request.py  rest_ops_response.py  rest_path_operations.py  rest_src_dst.py  rest_src_dst_operations.py  rest_status.py  rest_storage_config_response.py  rest_storage_path.py  rest_token_request.py
python-nextgen/test/: test_core_error_response.py  test_data_transfer_api.py  test_operations_api.py  test_ops_operation.py  test_ops_operation_state.py  test_rest_build_info.py  test_rest_op_id_response.py  test_rest_ops_request.py  test_rest_ops_response.py  test_rest_path_operations.py  test_rest_src_dst.py  test_rest_src_dst_operations.py  test_rest_status.py  test_rest_storage_config_response.py  test_rest_storage_path.py  test_rest_token_request.py  test_status_api.py  test_storage_api.py  test_tokens_api.py
requirements/: requirements_build.txt  requirements_example.txt  requirements_tests.txt
scripts/: generate_models.sh
scripts/templates/: Enum.jinja2
tests/: __init__.py  api_key_test.py  conftest.py  copy_test.py  download_file_test.py  exists_test.py  large_batch_test.py  large_file_test.py  list_test.py  metadata_test.py  mkdir_test.py  models_test.py  move_test.py  mp_test.py  operations_test.py  permission_test.py  remove_test.py  restart_test.py  retry_test.py  rmdir_test.py  status_test.py  storage_test.py  test_client.py  test_metadata.py  test_patch_coverage.py  test_services.py  token_refresh_test.py  upload_file_test.py  utils.py  wait_test.py
version/: index.html
version/0.2/: contribute.html  genindex.html  index.html  objects.inv  searchindex.js  sg_execution_times.html
version/0.2/_static/: search.json
version/0.2/api/: index.html
version/0.2/examples/: index.html  sg_execution_times.html
version/0.2/getting_started/: index.html
version/0.2/user_guide/: index.html  permissions.html  run_async.html
version/0.3/: contribute.html  index.html  objects.inv  search.html  sg_execution_times.html
version/0.3/_sources/: contribute.rst.txt
version/0.3/_static/: search.json
version/0.3/api/: index.html
version/0.3/examples/: index.html  sg_execution_times.html
version/0.3/getting_started/: index.html
version/0.3/user_guide/: index.html  permissions.html  run_async.html
version/0.4/: index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/0.4/_sources/: contribute.rst.txt
version/0.4/api/: index.html
version/0.4/user_guide/: index.html  run_async.html
version/dev/: contribute.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/dev/_sources/: index.rst.txt  sg_execution_times.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/examples/: index.html  sg_execution_times.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html  permissions.html  run_async.html
version/stable/: contribute.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/_sources/: sg_execution_times.rst.txt
version/stable/_static/: search.json
version/stable/examples/: index.html  sg_execution_times.html
version/stable/getting_started/: index.html
version/stable/user_guide/: permissions.html  run_async.html
(+436 files in other folders)
