[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ansys-hps-data-transfer-client"
version = "0.1.1"
description = "HPS data transfer client"
readme = "README_whl.md"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]                # this is required
maintainers = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
packages = [
    { include = "ansys", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"

pydantic = ">=2.7.1"
httpx = ">=0.27.0"
backoff = ">=2.2.1"
humanfriendly = ">=10.0"
requests = ">=2.21.0"
portend = ">=3.2.0"
filelock = ">=3.14.0"
psutil = ">=5.9.1"
asyncio-atexit = ">=1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"
bumpver = ">=2023.1129"
black = ">=24"
twine = ">=5.1.1"
pyc-wheel = ">=1.2.7"
poetry-lock-package = "^0.5.1"
importlib_metadata = ">=8.5.0"
datamodel-code-generator = ">=0.26.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
pytest-timeout = ">=2.3.1"
pytest-mock-resources = {version = ">=2.12.0", extras = ["redis"]}
python-on-whales = ">=0.73.0"
pytest-rerunfailures = ">=14.0"
pytest-asyncio = ">=0.24.0"
python-keycloak = ">=4.6.2"
python-slugify = ">=8.0.4"

[tool.black]
line-length=120

[tool.isort]
profile = "black"
force_sort_within_sections = true
default_section = "THIRDPARTY"
src_paths = ["doc", "ansys", "tests"]
line_length=120

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,./ansys/mapdl/core/mapdl_functions.py,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
quiet-level = 3

[tool.coverage.run]
source = ["ansys.hps.dt_client"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
markers = [
]
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]