[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-hps-data-transfer-client"
version = "0.1.dev0"
description = "Python client library for hps data transfer service"
readme = "README.rst"
requires-python = ">=3.10,<4.0"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7.1",
    "httpx==0.27.0",
    "backoff>=2.2.1",
    "humanfriendly>=10.0",
    "requests>=2.21.0",
    "portend>=3.2.0",
    "filelock>=3.14.0",
    "psutil>=5.9.1",
    "asyncio-atexit>=1.0.0",
    "pre-commit==4.0.1",
    "requests==2.32.3",
    "black==24.10.0",
    "importlib_metadata==8.5.0",
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-timeout==2.3.1",
    "pytest-mock-resources[redis]==2.12.1",
    "python-on-whales==0.73.0",
    "pytest-rerunfailures==14.0",
    "pytest-asyncio==0.24.0",
    "python-keycloak==4.6.2",
    "python-slugify>=8.0.4",
    "tox==4.21.2",
]
doc = [
    "ansys-sphinx-theme==1.2.2",
    "autodoc_pydantic==2.1.0",
    "jupyter_sphinx==0.5.3",
    "nbsphinx==0.9.5",
    "numpydoc==1.8.0",
    "myst-parser==4.0.0",
    "Sphinx==8.1.3",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinxcontrib-globalsubs==0.1.2",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.6.1",
    "sphinx-jinja==2.0.2",
    "sphinxnotes-strike==1.2.1",
    "sphinx-tabs==3.4.7",
]

build = [
    "build==1.2.2.post1",
    "twine==5.1.1",
    "wheel==0.44.0",
    "datamodel-code-generator==0.26.3",
]

[tool.flit.module]
name = "ansys.hps.data_transfer.client"

[project.urls]
Source = "https://github.com/ansys-internal/hps-data-transfer-client/"
Tracker = "https://github.com/ansys-internal/hps-data-transfer-client//issues"
Homepage = "https://github.com/ansys-internal/hps-data-transfer-client/"
Documentation = "https://hps.docs.pyansys.com"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true
source = ["ansys.hps"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = ".cov/html"

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.towncrier]
package = "ansys.hps.data_transfer.client"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/ansys.hps.data_transfer_client/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/ansys.hps.data_transfer_client/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true