[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.10,<4.0"
name = "ansys-hps-data-transfer-client"
description = "HPS data transfer client"
readme = "README_whl.md"
authors = [
     {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}
]
dynamic = [ "version" ]

dependencies = [
    "pydantic>=2.7.1",
    "httpx>=0.27.2",
    "backoff>=2.2.1",
    "humanfriendly>=10.0",
    "requests>=2.21.0",
    "portend>=3.2.0",
    "filelock>=3.14.0",
    "psutil>=5.9.1",
    "asyncio-atexit>=1.0.0",
]

[tool.poetry]
packages = [
    { include = "ansys", from = "." },
]
version = "0.0.0"

[tool.poetry.requires-plugins]
"poetry-plugin-export" = ">=1.9.0"
"poetry-plugin-shell" = ">=1.0.1"
"poetry-pre-commit-plugin" = ">=0.2.1"
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
#style = "semver"
#pattern = "(?P<base>\\d+\\.\\d+\\.\\d+)"
format = "{base}"

[tool.poetry-dynamic-versioning.from-file]
# Read version from the __version__.py file
# Todo: Adjust later to use gitversion
source = "ansys/hps/data_transfer/client/__version__.py"
pattern = "__version__ = \"(?P<base>\\d+\\.\\d+\\.\\d+)\""

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"
bumpver = ">=2023.1129"
black = ">=24"
twine = ">=5.1.1"
pyc-wheel = ">=1.2.7"
poetry-lock-package = "^0.5.1"
importlib_metadata = ">=8.5.0"
datamodel-code-generator = ">=0.26.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
pytest-timeout = ">=2.3.1"
pytest-mock-resources = {version = ">=2.12.0", extras = ["redis"]}
python-on-whales = ">=0.73.0"
pytest-rerunfailures = ">=14.0"
pytest-asyncio = ">=0.24.0"
python-keycloak = ">=4.6.2"
python-slugify = ">=8.0.4"

[tool.black]
line-length=120

[tool.isort]
profile = "black"
force_sort_within_sections = true
default_section = "THIRDPARTY"
src_paths = ["doc", "ansys", "tests"]
line_length=120

[tool.codespell]
skip = '*.lock,*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,./ansys/mapdl/core/mapdl_functions.py,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
quiet-level = 3

[tool.coverage.run]
source = ["ansys.hps.dt_client"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
markers = [
]
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]